--- a/project_svm.html
+++ b/project_svm.html
@@ -156,8 +156,7 @@ plt.tight_layout()
 plt.show()</code></pre>
 
 <h2>Accuracy results</h2>
-<pre><code>
-print(f"Cross-validation accuracy: {svm_grid.best_score_:.3f}")
+<pre><code>print(f"Cross-validation accuracy: {svm_grid.best_score_:.3f}")
 print(f"Test set accuracy: {accuracy_score(y_test, y_pred_svm):.3f}")
 </code></pre>
 Regarding accuracy results we have:
