--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 					<div id="intro">
 						<h1>Sergio<br />
 						Iglesias</h1>
-						<p>Welcome to my portfolio website. I'm Sergio, an Economics graduate from Spain (Cantabria), with knowledge in MySQL, Python, Tableau and and Power BI, also with a passion for econometric modeling. I am driven by providing value through analytics, data visualization, and data-driven decision making.</p>
+						<p>Welcome to my portfolio website. I'm Sergio, an Economics graduate from Spain (Cantabria), with knowledge in MySQL, Python, Tableau and Power BI, also with a passion for econometric modeling. I am driven by providing value through analytics, data visualization, and data-driven decision making.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -28,7 +28,7 @@
 
 <nav id="nav">
     <ul class="links">
-        <li class="active"><a href="project.html">Projects</a></li>
+        <li class="active">Projects</li>
     </ul>
     <ul class="icons">
         <li><a href="https://www.linkedin.com/in/sergio-iglesias-179aa323b/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
@@ -84,11 +84,11 @@
 						<h3>Email</h3>
 						<p><a href="mailto:sergioiglesiaslopez03@gmail.com">sergioiglesiaslopez03@gmail.com</a></p>
 					</section>
-							<section class="social container">
+							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-<li><a href="https://www.linkedin.com/in/sergio-iglesias-179aa323b/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
-<li><a href="https://github.com/sergioiglesias1" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/sergio-iglesias-179aa323b/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
+									<li><a href="https://github.com/sergioiglesias1" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
@@ -112,6 +112,7 @@
 	</body>
 
 </html>
+
 
 
 
