--- a/project_svm.html
+++ b/project_svm.html
@@ -17,8 +17,7 @@
 		<header id="header"></header>
 		  <nav id="nav">
 			<ul class="links">
-				<li><a href="index.html">Opening</a></li>
-				<li class="active"><a href="project.html">Projects</a></li>
+				<li><a href="index.html">Main</a></li>
 			</ul>
 			<ul class="icons">
 				<li><a href="https://www.linkedin.com/in/sergio-iglesias-179aa323b/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
@@ -224,6 +223,7 @@ print(f"BEST HYPERPARAMETERS: {svm_grid.best_params_}")
 </body>
 
 </html>
+
 
 
 
