--- a/project.html
+++ b/project.html
@@ -16,8 +16,7 @@
 
     <nav id="nav">
       <ul class="links">
-        <li><a href="index.html">Opening</a></li>
-        <li class="active"><a href="project.html">Projects</a></li>
+        <li><a href="index.html">Main</a></li>
       </ul>
       <ul class="icons">
         <li><a href="https://www.linkedin.com/in/sergio-iglesias-179aa323b/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
@@ -191,6 +190,7 @@ plt.show()</code></pre>
 	<script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
