--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                      <h2><a href="#">Iris Clasification using Machine Learning with SVM</a></h2>
                                 </header>
 								 <p>This study classifies Iris flower species using Support Vector Machines with hyperparameter optimization. The model achieves 96.7% accuracy on the test set, successfully distinguishing between setosa, versicolor, and virginica species based on sepal and petal measurements.</p>
-    							<a href="project_svm.html" class="image main"><img src="images/output.png" alt="" /></a>
+    							<a href="project_svm.html" class="image main"><img src="images/output_ml_svm.png" alt="" /></a>
                                 <ul class="actions special">
 								<li><a href="project_svm.html" class="button large">View Project</a></li>
                           </ul>
@@ -112,6 +112,7 @@
 	</body>
 
 </html>
+
 
 
 
