--- a/project_svm.html
+++ b/project_svm.html
@@ -221,7 +221,8 @@ print(f"BEST HYPERPARAMETERS: {svm_grid.best_params_}")
   <li><strong>Best hyperparameters:</strong> 
     <ul>
       <li><strong>C:</strong> 1</li>
-      <li><strong>γ:</strong> 0.1</li>
+      <li><strong>γ:</strong> 0.1</li>	
+	<img src="images/output_scatterplot.png" style="max-width:100%; height:auto;">
 	<img src="images/cap1.png" style="max-width:100%; height:auto;">
 	<img src="images/cap2.png" style="max-width:100%; height:auto;">
 	<img src="images/cap3.png" style="max-width:100%; height:auto;">
@@ -252,6 +253,7 @@ print(f"BEST HYPERPARAMETERS: {svm_grid.best_params_}")
 </body>
 
 </html>
+
 
 
 
