--- a/project_svm.html
+++ b/project_svm.html
@@ -237,7 +237,7 @@ print(f"BEST HYPERPARAMETERS: {svm_grid.best_params_}")
                     <li>The species <em>setosa</em> is the easiest to classify, however, <em>versicolor</em> and <em>virginica</em> show some overlap</li>
                 </ul>
     <p>This project demonstrates how machine learning can extract meaningful patterns, in this specific case, from botanical data. Could we apply this same approach to your classification challenge? Let's connect to discuss how SVM or other ML models could solve your business problems.</p>				
-		<a href="https://github.com/sergioiglesias1" class="button">View Full Code on GitHub</a>
+		<a href="https://github.com/sergioiglesias1/ML-Clasification-of-Iris-SVM" class="button">View Full Code on GitHub</a>
 				</div>
 			</article>
 		</div>
