--- a/project.html
+++ b/project.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>Beta-Convergence Analysis</title>
   <meta charset="utf-8" />
@@ -190,6 +190,7 @@ plt.show()</code></pre>
 	<script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
