--- a/project_svm.html
+++ b/project_svm.html
@@ -4,8 +4,9 @@
 	<title>SVM Optimization</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="assets/css/main.css" />
-	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+ 	<link rel="stylesheet" href="assets/css/main.css" />
+  	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+ 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
 </head>
 
 <body class="is-preload">
@@ -253,6 +254,7 @@ print(f"BEST HYPERPARAMETERS: {svm_grid.best_params_}")
 </body>
 
 </html>
+
 
 
 
