--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 						</ul>
 					</div>
 
-					<div id="main"></div>
 	<body class="is-preload">
 		
 		<div id="wrapper" class="fade-in">
@@ -64,7 +63,7 @@
 				             <article>
                      <header>
                     <span class="date">August 28, 2025</span>
-                     <h2><a href="#">Iris Clasification using Machine Learning with SVM</a></h2>
+                     <h2><a href="#">Iris Clasification using SVM with Scikit-Learn</a></h2>
                                 </header>
 								 <p>This study classifies Iris flower species using Support Vector Machines with hyperparameter optimization. The model achieves 96.7% accuracy on the test set, successfully distinguishing between setosa, versicolor, and virginica species based on sepal and petal measurements.</p>
     							<a href="project_svm.html" class="image main"><img src="images/output_ml_svm.png" alt="" /></a>
@@ -112,6 +111,7 @@
 	</body>
 
 </html>
+
 
 
 
