--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<span class="date">August 4, 2025</span>
     <h2><a href="#">β-CONVERGENCE ANALYSIS</a></h2>
 				</header>
-				<p>A broad study on the beta-convergence of economic growth across countries between 2004 and 2024, utilizing econometric techniques with Python.</p>
+				<p>A broad study on the beta-convergence of economic growth across countries between 2004 and 2024, using econometric techniques with Python.</p>
 				<a href="C:\Users\Usuario\Downloads\PortWebsite\project.html" class="image main"><img src="images/output_3.png" alt="" /></a>
 					<ul class="actions special">
 					<li><a href="project.html" class="button large">View Project</a></li>
@@ -103,6 +103,7 @@
 	</body>
 
 </html>
+
 
 
 
