--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>Portfolio Sergio Iglesias</title>
@@ -7,16 +8,19 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
+
 		<div id="wrapper" class="fade-in">
+
 			<div id="intro">
-						<h1>Sergio<br />
-						Iglesias</h1>
-						<p>Welcome to my portfolio website. I'm Sergio, an Economics graduate from Spain (Cantabria), with knowledge in MySQL, Python, Tableau and Power BI, also with a passion for econometric modeling. I am driven by providing value through analytics, data visualization, and data-driven decision making.</p>
-						<ul class="actions">
-							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-						</ul>
-					</div>
-<header id="header"></header>
+				<h1>Sergio<br />
+				Iglesias</h1>
+				<p>Welcome to my portfolio website. I'm Sergio, an Economics graduate from Spain (Cantabria), proficient in MySQL, Python and Tableau, also with a passion for econometric modeling. I am driven by providing value through analytics, data visualization, and data-driven decision making.</p>
+				<ul class="actions">
+					<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+				</ul>
+			</div>
+
+			<header id="header"></header>
 <nav id="nav">
     <ul class="links">
         <li class="active">Projects</li>
@@ -103,6 +107,7 @@
 	</body>
 
 </html>
+
 
 
 
