--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         }
         
         body {
-            background-color: #f8f9fa;
-            color: #333;
+            background-color: #4a4a4a;
+            color: #fff;
             line-height: 1.6;
             padding: 0;
         }
@@ -350,7 +350,7 @@
     <div id="wrapper" class="fade-in">
         <div id="intro">
             <h1>Sergio<br />Iglesias</h1>
-            <p>Welcome to my portfolio website. I'm Sergio, an Economics graduate from Spain (Cantabria), with knowledge in MySQL, Python, Tableau and Power BI, also with a passion for econometric modeling. I am driven by providing value through analytics, data visualization, and data-driven decision making.</p>
+            <p>Welcome to my portfolio website. I'm Sergio, an Economics graduate from Spain (Cantabria), proficient in MySQL, Python and Tableau, also with a passion for econometric modeling. I am driven by providing value through analytics, data visualization, and data-driven decision making.</p>
             <a href="#header" class="button scrolly"><i class="fas fa-arrow-down"></i> Continue</a>
         </div>
 
@@ -385,7 +385,7 @@
                     <h2><a href="#">Gold Price Analysis (2004-2025)</a></h2>
                 </header>
                 <p>This Tableau dashboard analyzes weekly gold price data through four tables. It shows the difference between closing and opening prices, volume trends, historical closing price trends, and yearly maximum prices. The data is weekly but the maximums are organized by year for clearer insights.</p>
-                <a href="#" class="image fit"><img src="https://images.unsplash.com/photo-1550672699-9081c8d5ca67?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1171&q=80" alt="Gold Price Analysis" /></a>
+                <a href="#" class="image fit">    <img src="https://images.unsplash.com/photo-1621525140723-1ad66813ba6a?ixlib=rb-4.0.3&auto=format&fit=crop&w=1170&q=80" alt="Gráfico de precios del oro" /></a>
                 <ul class="actions special">
                     <li><a href="https://public.tableau.com/app/profile/sergio.iglesias.l.pez/viz/gold_price_xauusd/XAUUSDDashboard" class="button">See dashboard</a></li>
                 </ul>
@@ -474,6 +474,7 @@
     </script>
 </body>
 </html>
+
 
 
 
