--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                     <h2><a href="#">Gold Price Analysis (2004-2025)</a></h2>
                 </header>
                 <p>This Tableau dashboard analyzes weekly gold price data through four tables. It shows the difference between closing and opening prices, volume trends, historical closing price trends, and yearly maximum prices. The data is weekly but the maximums are organized by year for clearer insights.</p>
-                <a href="#" class="image fit">    <img src="https://images.unsplash.com/photo-1621525140723-1ad66813ba6a?ixlib=rb-4.0.3&auto=format&fit=crop&w=1170&q=80" alt="Gráfico de precios del oro" /></a>
+                <a href="#" class="image fit"><img src="images/104002.jpg" alt="Gold" /></a>
                 <ul class="actions special">
                     <li><a href="https://public.tableau.com/app/profile/sergio.iglesias.l.pez/viz/gold_price_xauusd/XAUUSDDashboard" class="button">See dashboard</a></li>
                 </ul>
@@ -397,7 +397,7 @@
                     <h2><a href="#">Iris Classification using SVM with Scikit-Learn</a></h2>
                 </header>
                 <p>This study classifies Iris flower species using Support Vector Machines with hyperparameter optimization. The model achieves 96.7% accuracy on the test set, successfully distinguishing between setosa, versicolor, and virginica species based on sepal and petal measurements.</p>
-                <a href="project_svm.html" class="image main"><img src="images/output_scatterplot.png" alt="Iris Classification" /></a>
+                <a href="project_svm.html" class="image main"><img src="images\ML_image.jpg" alt="Iris Classification" /></a>
                 <ul class="actions special">
                     <li><a href="project_svm.html" class="button large">View Project</a></li>
                 </ul>
@@ -474,6 +474,7 @@
     </script>
 </body>
 </html>
+
 
 
 
