--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         #intro {
             text-align: center;
             padding: 80px 20px;
-            background: linear-gradient(135deg, #4e73df 0%, #7a8fd9 100%);
+            background: linear-gradient(135deg, #224abe 0%, #7a8fd9 100%);
             color: white;
             margin-bottom: 30px;
             height: 100vh;
@@ -474,6 +474,7 @@
     </script>
 </body>
 </html>
+
 
 
 
