--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
             justify-content: space-between;
             align-items: center;
             padding: 20px 30px;
-            margin-bottom: 30px;
             background-color: white;
             border-radius: 10px;
             box-shadow: 0 3px 10px rgba(0, 0, 0, 0.08);
@@ -87,6 +86,7 @@
             width: calc(100% - 40px);
             max-width: 1200px;
             z-index: 1000;
+            margin-bottom: 0;
         }
         
         .links {
@@ -449,7 +449,7 @@
                     <h3>Social</h3>
                     <ul class="icons alt">
                         <li><a href="https://www.linkedin.com/in/sergio-iglesias-179aa323b/"><i class="fab fa-linkedin fa-2x"></i></a></li>
-                        <li><a href="https://github.com/sergioiglesias1/ML-Clasification-of-Iris-SVM"><i class="fab fa-github fa-2x"></i></a></li>
+                        <li><a href="https://github.com/sergioiglesias1/"><i class="fab fa-github fa-2x"></i></a></li>
                     </ul>
                 </section>
             </section>
@@ -505,6 +505,7 @@
     </script>
 </body>
 </html>
+
 
 
 
