--- a/index.html
+++ b/index.html
@@ -76,17 +76,13 @@
             justify-content: space-between;
             align-items: center;
             padding: 20px 30px;
+            margin-bottom: 30px;
             background-color: white;
             border-radius: 10px;
             box-shadow: 0 3px 10px rgba(0, 0, 0, 0.08);
-            position: fixed;
+            position: sticky;
             top: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: calc(100% - 40px);
-            max-width: 1200px;
-            z-index: 1000;
-            margin-bottom: 0;
+             z-index: 100;
         }
         
         .links {
@@ -505,6 +501,7 @@
     </script>
 </body>
 </html>
+
 
 
 
