--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             background-color: white;
             border-radius: 10px;
             box-shadow: 0 3px 10px rgba(0, 0, 0, 0.08);
-            position: fixed;
+            position: sticky;
             top: 20px;
              z-index: 100;
         }
@@ -501,6 +501,7 @@
     </script>
 </body>
 </html>
+
 
 
 
