--- a/index.html
+++ b/index.html
@@ -426,6 +426,7 @@
                     <span class="date">August 4, 2025</span>
                     <h2><a href="#">β-CONVERGENCE ANALYSIS</a></h2>
                 </header>
+                <p>7-minute read</p>
                 <p>A broad study on the beta-convergence of economic growth across countries between 2004 and 2024, utilizing econometric techniques with Python.</p>
                 <a href="C:\Users\Usuario\Downloads\PortWebsite\project.html" class="image main"><img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="Beta Convergence Analysis" /></a>
                 <ul class="actions special">
@@ -450,6 +451,7 @@
                     <span class="date">August 28, 2025</span>
                     <h2><a href="#">Iris Classification using SVM with Scikit-Learn</a></h2>
                 </header>
+                <p>5-minute read</p>
                 <p>This study classifies Iris flower species using Support Vector Machines with hyperparameter optimization. The model achieves 96.7% accuracy on the test set, successfully distinguishing between setosa, versicolor, and virginica species based on sepal and petal measurements.</p>
                 <a href="project_svm.html" class="image"><img src="images\ML_image.jpg" alt="Iris Classification" /></a>
                 <ul class="actions special">
@@ -528,6 +530,7 @@
     </script>
 </body>
 </html>
+
 
 
 
