--- a/project.html
+++ b/project.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
 </head>
 
-<body class="is-preload">
+<body class="is-preload" style="background-color: #4a4a4a;">
   <div id="wrapper" class="fade-in">
 
     <header id="header"></header>
@@ -189,6 +189,7 @@ plt.show()</code></pre>
 	<script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
