--- a/project_svm.html
+++ b/project_svm.html
@@ -9,7 +9,7 @@
  	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
 </head>
 
-<body class="is-preload" style="background-color: #4a4a4a;">
+<body class="is-preload">
 	<div id="wrapper" class="fade-in">		    
 		<header id="header"></header>
 		  <nav id="nav">
@@ -249,6 +249,7 @@ print(f"BEST HYPERPARAMETERS: {svm_grid.best_params_}")
 </body>
 
 </html>
+
 
 
 
