--- a/project.html
+++ b/project.html
@@ -36,7 +36,18 @@
           </h1>
 				</header>
 				<div class="content">
-					<p>We'll be working with GDP per capita growth data from the <a href="https://databank.worldbank.org/reports.aspx?source=2&series=NY.GDP.PCAP.KD.ZG&country=#">World Development Indicators (WDI)</a> between 2004 and 2024. Each row in the dataset represents a different country and contains information on GDP growth rates over the specified periods. Here are some of the key variables in the dataset:</p>
+					<h2>What is β-Convergence and Why is it Important?</h2>
+    					<p>β-Convergence is an economic concept that examines whether poorer economies (or those with lower initial growth rates) tend to grow faster than richer ones, thereby "catching up" over time. In this project, β-convergence is analyzed by regressing the GDP per capita growth rate in a later period (e.g., 2019-2024) against the growth rate in an earlier period (e.g., 2004-2008). A negative regression coefficient (β < 0) indicates convergence, as countries with lower initial growth rates exhibit higher subsequent growth. Conversely, a positive β suggests divergence, where faster-growing countries continue to grow rapidly.</p>
+    					<p><strong>Why is it important?</strong> β-Convergence is a key concept in economic growth theory, particularly in the context of the neoclassical growth model, which predicts that economies with lower initial income levels should grow faster due to diminishing returns to capital. Understanding convergence helps policymakers assess whether economic disparities between countries (e.g., emerging vs. developed economies) are narrowing over time. For instance:</p>
+    		<ul>
+        <li>For emerging economies, evidence of convergence could indicate successful development policies or access to global markets.</li>
+        <li>For developed economies, convergence may reflect economic stabilization or recovery after crises (e.g., the 2008 financial crisis or COVID-19).</li>
+        <li>Analyzing convergence across different time periods (e.g., pre-crisis, post-crisis, and recent years) provides insights into how global events, such as financial crises or pandemics, affect growth dynamics.</li>
+    </ul>
+    <p>In this project, I investigate β-convergence by comparing emerging and developed countries over multiple periods (2004-2024). By calculating regression coefficients and R² values, I assess whether convergence occurs and how it differs between country groups. This analysis not only tests economic theory but also demonstrates the application of data science techniques—such as data cleaning, regression modeling, and visualization—to real-world macroeconomic data.</p>
+    
+    <h2>Dataset Description</h2>
+    <p>We'll be working with GDP per capita growth data from the <a href="https://databank.worldbank.org/reports.aspx?source=2&series=NY.GDP.PCAP.KD.ZG&country=#">World Development Indicators (WDI)</a> between 2004 and 2024. Each row in the dataset represents a different country and contains information on GDP growth rates over the specified periods. Here are some of the key variables in the dataset:</p>
 					<ul>
 						<li><strong>Country Code</strong> — The unique identifier for each country (e.g., USA, LUX, JPN, IRL, KOR).</li>
 						<li><strong>Group</strong> — Classification of countries into Emerging or Developed groups.</li>
@@ -189,6 +200,7 @@ plt.show()</code></pre>
 	<script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
